--- a/src/Service.ChangeBalanceGateway/Service.ChangeBalanceGateway.csproj
+++ b/src/Service.ChangeBalanceGateway/Service.ChangeBalanceGateway.csproj
@@ -15,14 +15,14 @@
     <PackageReference Include="MyJetWallet.MatchingEngine.Grpc" Version="1.1.2" />
     <PackageReference Include="MyJetWallet.Sdk.GrpcMetrics" Version="2.0.0" />
     <PackageReference Include="MyJetWallet.Sdk.GrpcSchema" Version="1.0.5" />
-    <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.3.11" />
+    <PackageReference Include="MyJetWallet.Sdk.Service" Version="1.3.14" />
     <PackageReference Include="MyJetWallet.Service.BalanceHistory.Client" Version="1.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="4.1.1" />
     <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
     <PackageReference Include="SimpleTrading.BaseMetrics" Version="1.0.3" />
     <PackageReference Include="SimpleTrading.ServiceStatusReporterConnector" Version="1.0.7" />
-    <PackageReference Include="SimpleTrading.SettingsReader" Version="1.1.0" />
+    <PackageReference Include="MySettingsReader" Version="1.2.0" />
     <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.0.4" />
     <PackageReference Include="MyJetWallet.Service.AssetsDictionary.Client" Version="1.5.4" />
   </ItemGroup>
