--- a/.github/workflows/release-service.yml
+++ b/.github/workflows/release-service.yml
@@ -2,7 +2,7 @@ name: Release Service
 
 on:
   push:
-    tags: "1.*"
+    tags: "2.*"
 
 jobs:
   build:
@@ -49,6 +49,17 @@ jobs:
         path: ./publish-api
         registry: docker.pkg.github.com
         repository: ${{ secrets.ORG_NAME }}/service.changebalancegateway/myjetwallet.service.changebalancegateway
+        tag_with_ref: true
+        build_args: app_version=myjetwallet.service.changebalancegateway:${{ steps.extract_branch.outputs.branch }},app_compilation_date=${{ steps.current-time.outputs.formattedTime }}
+
+    - name: Publish image ST
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.ST_DOCKER_USER }}
+        password: ${{ secrets.ST_DOCKER_PASSWORD }}
+        path: ./publish-api
+        registry: simpletrading.azurecr.io
+        repository: spot/myjetwallet.service.changebalancegateway
         tag_with_ref: true
         build_args: app_version=myjetwallet.service.changebalancegateway:${{ steps.extract_branch.outputs.branch }},app_compilation_date=${{ steps.current-time.outputs.formattedTime }}
 
